--- a/src/app/user-list/user-list.component.html
+++ b/src/app/user-list/user-list.component.html
@@ -26,10 +26,10 @@
         <mat-checkbox color="warn" (click)="toggle('h')" [(ngModel)]="show[7]" class="fontS">Registered On</mat-checkbox>
     </div>
     <div class="col-md-2">
-        <mat-checkbox color="warn" (click)="toggle('i')" [(ngModel)]="show[8]" class="fontS">Payment Receipt</mat-checkbox>
+        <mat-checkbox color="warn" (click)="toggle('i')" [(ngModel)]="show[8]" class="fontS">Events Registered</mat-checkbox>
     </div>
     <div class="col-md-2">
-        <mat-checkbox color="warn" (click)="toggle('j')" [(ngModel)]="show[9]" class="fontS">UPI ID</mat-checkbox>
+        <mat-checkbox color="warn" (click)="toggle('j')" [(ngModel)]="show[9]" class="fontS">Payments</mat-checkbox>
     </div>
     <div class="col-md-2">
         <mat-checkbox color="warn" (click)="toggle('k')" [(ngModel)]="show[10]" class="fontS">Coupon Photo</mat-checkbox>
@@ -83,17 +83,22 @@
         <td mat-cell *matCellDef="let user" class="fontS"> {{user.createdAt}} </td>
     </ng-container>
     <ng-container matColumnDef="i">
-        <th mat-header-cell *matHeaderCellDef class="fontS"> Payment Receipt </th>
+        <th mat-header-cell *matHeaderCellDef class="fontS"> Events Registered </th>
         <td mat-cell *matCellDef="let user" class="fontS"> 
-            <a *ngIf="user.receipt != ''" [href]="url+user._id+'/receipt1.'+user.receipt">Download Receipt</a>
-            <span class="fontS" *ngIf="user.receipt==''">Event not registered</span>
+            <span class="fontS" *ngIf="user.regEvents && user.regEvents.length==0">Event not registered</span>
+            <span class="fontS" *ngFor="let ee of user.regEvents">{{ee.en}} <span class="header text-danger">({{ee.cn}})</span><br></span>
         </td>
     </ng-container>
     <ng-container matColumnDef="j">
-        <th mat-header-cell *matHeaderCellDef class="fontS"> UPI ID </th>
+        <th mat-header-cell *matHeaderCellDef class="fontS"> Payments </th>
         <td mat-cell *matCellDef="let user" class="fontS"> 
-            <span class="fontS" *ngIf="user.receipt==''">Event not registered</span>
-            <span class="fontS" *ngIf="user.receipt!=''">{{user.upiId}}</span>
+            <span class="fontS" *ngIf="user.eventRegDetails.receipt.length==0">Event not registered</span>
+            <ng-container *ngFor="let rr of user.eventRegDetails.receipt; let k=index">
+                <span class="fontS" *ngIf="rr!=''">Paid INR {{user.eventRegDetails.total[k]}}/- <br> UPI ID: {{user.eventRegDetails.upiId[k]}}</span>
+                <br>
+                <a *ngIf="user.receipt != ''" [href]="url+user._id+'/receipt'+(k+1)+'.'+user.eventRegDetails.receipt[k]">Download Receipt</a>
+                <br><br>
+            </ng-container>
         </td>
     </ng-container>
     <ng-container matColumnDef="k">
