Query Section added

--- a/src/app/user-list/user-list.component.html
+++ b/src/app/user-list/user-list.component.html
@@ -37,7 +37,9 @@
     <div class="col-md-2">
         <mat-checkbox color="warn" (click)="toggle('l')" [(ngModel)]="show[11]" class="fontS">Action</mat-checkbox>
     </div>
-    <div class="col-md-2"></div>
+    <div class="col-md-2">
+        <button mat-raised-button color="warn" (click)="exportToExcel()">Download User List</button>
+    </div>
 </div>
 <br>
 <div class="mat-elevation-z8" style="margin: 0 5%;" *ngIf="!loading">
@@ -128,6 +130,53 @@
     <mat-paginator #paginator [pageSizeOptions]="[10, 20]" class="fontS" showFirstLastButtons></mat-paginator>
 </div>
 <br>
+<table #allData hidden>
+    <thead>
+        <tr>
+            <th style="font-weight: bold;">Sl. No.</th>
+            <th style="font-weight: bold;">Name</th>
+            <th style="font-weight: bold;">Admin</th>
+            <th style="font-weight: bold;">Verified</th>
+            <th style="font-weight: bold;">Email ID</th>
+            <th style="font-weight: bold;">Stream</th>
+            <th style="font-weight: bold;">Year</th>
+            <th style="font-weight: bold;">Contact #</th>
+            <th style="font-weight: bold;">Institute Name</th>
+            <th style="font-weight: bold;">Events Registered</th>
+            <th style="font-weight: bold;">Payments</th>
+            <th style="font-weight: bold;">Coupon Applied</th>
+            <th style="font-weight: bold;">Coupon Photo</th>
+            <th style="font-weight: bold;">Registered On</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr *ngFor="let user of usersData; let i=index">
+            <td> {{i+1}} </td>
+            <td> {{user.name}} </td>
+            <td> {{user.admin}} </td>
+            <td> {{user.verified}} </td>
+            <td> {{user.email}} </td>
+            <td> {{user.stream}} </td>
+            <td> {{user.year}} </td>
+            <td> {{user.contact}} </td>
+            <td> {{user.instituteName}} </td>
+            <td>
+                <span class="fontS" *ngIf="user.regEvents && user.regEvents.length==0">Event not registered</span>
+                <span class="fontS" *ngFor="let ee of user.regEvents">{{ee.en}} <span class="header text-danger">({{ee.cn}})</span><br></span>
+            </td>
+            <td>
+                <span class="fontS" *ngIf="user.eventRegDetails.receipt.length==0">Event not registered</span>
+            <ng-container *ngFor="let rr of user.eventRegDetails.receipt; let k=index">
+                <span class="fontS" *ngIf="rr!=''">Paid INR {{user.eventRegDetails.total[k]}}/- <br> UPI ID: {{user.eventRegDetails.upiId[k]}}</span>
+                <br><br>
+            </ng-container>
+            </td>
+            <td> {{user.couponApplied}} </td>
+            <td> {{user.couponPhoto}} </td>
+            <td> {{user.createdAt}} </td>
+        </tr>
+    </tbody>
+</table>
 <div class="loader-holder" *ngIf="loading">
 <div class="lds-roller"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>
 </div>
