--- a/src/app/query/query.component.html
+++ b/src/app/query/query.component.html
@@ -62,7 +62,7 @@
                     <div class="col-sm-2">
                         <div>
                             <button mat-raised-button color="primary" (click)="addMessage()"
-                                [disabled]="queryForm.form.invalid">Add Query</button>
+                                [disabled]="queryForm.form.invalid">Send message</button>
                         </div>
                     </div>
                 </div>
@@ -72,9 +72,12 @@
                     <br>
                     <br>
                     <div class="row">
-                        <div class="col-sm-6"><h5 class="header text-danger"> {{message.msg}} </h5></div>
-                        <div class="col-sm-3"><h5> {{message.name}} ({{message.email}}) </h5></div>
-                        <div class="col-sm-2">
+                        <div class="col-sm-6"><h5 class="fontS text-white"> {{message.msg}} </h5></div>
+                        <div class="col-sm-3 text-white">
+                            <h5 *ngIf="message.name != 'ADMIN'"> {{message.name}} ({{message.email}}) </h5>
+                            <h5 class="fontS text-white" *ngIf="message.name == 'ADMIN'">ADMIN</h5>
+                        </div>
+                        <div class="col-sm-2 text-white">
                             {{message.createdAt |date: 'HH:mm'}}
                         </div>
                         <div class="col-sm-1">
