User List Updates

--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -34,6 +34,11 @@
                 <div class="col-sm-7"><h5> {{userData.instituteName}} </h5></div>
             </div>
             <br>
+            <div class="row fontS">
+                <div class="col-sm-5 text-secondary font-bold"><h5>RC ID:</h5></div>
+                <div class="col-sm-7 text-danger font-bold"><h5> {{userData.rcid}} </h5></div>
+            </div>
+            <br>
         </div>
         <div class="col-sm-6">
             <div class="row fontS">
