--- a/src/app/user-list/user-list.component.html
+++ b/src/app/user-list/user-list.component.html
@@ -105,14 +105,14 @@
     <ng-container matColumnDef="i">
         <th mat-header-cell *matHeaderCellDef class="fontS"> Events Registered </th>
         <td mat-cell *matCellDef="let user" class="fontS"> 
-            <span class="fontS" *ngIf="user.regEvents && user.regEvents.length==0">Event not registered</span>
+            <span class="fontS" *ngIf="user.regEvents && user.regEvents.length==0">---</span>
             <span class="fontS" *ngFor="let ee of user.regEvents">{{ee.en}} <span class="header text-danger">({{ee.cn}})</span><br></span>
         </td>
     </ng-container>
     <ng-container matColumnDef="j">
         <th mat-header-cell *matHeaderCellDef class="fontS"> Payments </th>
         <td mat-cell *matCellDef="let user" class="fontS"> 
-            <span class="fontS" *ngIf="user.eventRegDetails.receipt.length==0">Event not registered</span>
+            <span class="fontS" *ngIf="user.eventRegDetails.receipt.length==0">---</span>
             <ng-container *ngFor="let rr of user.eventRegDetails.receipt; let k=index">
                 <span class="fontS" *ngIf="rr!=''">Paid INR {{user.eventRegDetails.total[k]}}/- <br> UPI ID: {{user.eventRegDetails.upiId[k]}}</span>
                 <br>
@@ -124,7 +124,7 @@
     <ng-container matColumnDef="k">
         <th mat-header-cell *matHeaderCellDef class="fontS"> Coupon Photo </th>
         <td mat-cell *matCellDef="let user" class="fontS"> 
-            <span class="fontS" *ngIf="!user.couponPhoto">Coupon Photo not added</span>
+            <span class="fontS" *ngIf="!user.couponPhoto">---</span>
             <a *ngIf="user.couponPhoto" [href]="url+user._id+'/couponPhoto.'+user.couponPhoto">Download Coupon Photo</a>
         </td>
     </ng-container>
