Forgot Password working

--- a/src/app/forgot-password/forgot-password.component.html
+++ b/src/app/forgot-password/forgot-password.component.html
@@ -1,53 +1,94 @@
+<div class="container" style="padding: 5% 5%;">
+  <h2 class="display-6 text-center header">Avoid Reloading Page to avoid Error</h2>
   <mat-vertical-stepper linear #stepper>
-    <mat-step [stepControl]="firstFormGroup">
-      <form [formGroup]="firstFormGroup">
-        <ng-template matStepLabel>Enter your registered email id</ng-template>
-        <mat-form-field>
-          <mat-label>
-            Email Id
-          </mat-label>
-          <input 
-           matInput
-           placeholder="Enter registered email"
-           formControlName="firstCtrl"
-           pattern="^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,3})+$"
-           required>
-        </mat-form-field>
-        <div>
-          <button mat-button matStepperNext>Send OTP</button>
+    <mat-step label="Enter your registered Email Id" completed = {{otpSent}}>
+      <form #firstForm="ngForm">
+        <div class="col-sm-4">
+          <p>
+            <mat-form-field appearance="outline" style="width: 100%;">
+              <mat-label>Email Id</mat-label>
+              <input 
+                matInput
+                placeholder="Enter registered email"
+                pattern="^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,3})+$"
+                [(ngModel)]="email"
+                name="emailId"
+                #userEmail="ngModel"
+                required>
+            </mat-form-field>
+          </p>
+        </div>
+        <div class="col-sm-4">
+          <button mat-button color="primary" [disabled]="userEmail.errors" (click)="sendOTP(stepper)" matStepperNext>Send OTP</button>
         </div>
       </form>
     </mat-step>
-    <mat-step [stepControl]="secondFormGroup">
-      <form [formGroup]="secondFormGroup">
-        <ng-template matStepLabel>Enter 6 digit OTP sent in your email</ng-template>
-        <mat-form-field>
-          <mat-label>
-            OTP
-          </mat-label>
-          <input
-            matInput
-            type="text"
-            formControlName="secondCtrl"
-            placeholder="XXXXXX"
-            maxlength=6
-            minlength=6
-            required>
-        </mat-form-field>
-        <div>
-          <button mat-button matStepperPrevious>Back</button>
-          <button mat-button matStepperNext>Next</button>
+    <mat-step label="Enter 6 digit OTP" completed={{validOTP}}>
+      <form #secondForm="ngForm">
+        <div class="col-sm-4">
+          <p>
+            <mat-form-field appearance="outline" style="width: 100%;">
+              <mat-label>OTP</mat-label>
+              <input matInput
+                type="text"
+                placeholder="XXXXXX"
+                name="otp"
+                #userOTP="ngModel"
+                [(ngModel)]="otpEntered"
+                maxlength=6
+                minlength=6
+                required>
+            </mat-form-field>
+          </p>
+        </div>
+        <div class="col-sm-4">
+          <button mat-button color="primary" [disabled]="userOTP.errors" (click)="validateOTP()" matStepperNext>Verify OTP</button>
         </div>
       </form>
     </mat-step>
-    <mat-step>
-      <ng-template matStepLabel>Done</ng-template>
-      <p>You are now done.</p>
-      <div>
-        <button mat-button matStepperPrevious>Back</button>
-        <button mat-button (click)="stepper.reset()">Reset</button>
-      </div>
+    <mat-step label="Reset Password">
+      <form #thirdForm="ngForm">
+        <div class="col-sm-4">
+          <p>
+              <mat-form-field appearance="outline" style="width: 100%;">
+                  <mat-label>Type in Your New Account Password:</mat-label>
+                  <input matInput
+                    type="password"
+                    placeholder="Password"
+                    name="password1"
+                    #newPassword="ngModel"
+                    [(ngModel)]="password1"
+                    required>
+              </mat-form-field>
+          </p>
+        </div>
+        <div class="col-sm-4">
+            <p>
+                <mat-form-field appearance="outline" style="width: 100%;">
+                    <mat-label>Re-type New Account Password:</mat-label>
+                    <input matInput
+                      type="password"
+                      placeholder="Password Once Again"
+                      name="password2"
+                      #newPassword2="ngModel"
+                      [(ngModel)]="password2"
+                      required>
+                    <mat-hint *ngIf="newPassword.value != newPassword2.value && newPassword2.touched"> Passwords do not match </mat-hint>
+                </mat-form-field>
+            </p>
+        </div>
+        <div class="col-sm-4">
+          <button mat-raised-button color="primary" [disabled]="newPassword.value != newPassword2.value || newPassword.value == ''" (click)="resetPassword()">Reset Password</button>
+        </div>
+      </form>
     </mat-step>
   </mat-vertical-stepper>
-  
+</div>
 
+<p class="fontS text-center">Back to Home!
+  <button mat-raised-button color="accent" routerLink="/home">Login</button>
+</p>
+  
+<div class="loader-holder" *ngIf="loading">
+  <div class="lds-roller"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>
+</div>
