--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -43,6 +43,9 @@
                 <button mat-raised-button type="submit"
                     [disabled]="loginForm.form.invalid">Login</button>
             </p>
+            <p>
+                <a routerLink="/forgotpassword">Forgot Password</a>
+            </p>
         </form>
         <br>
         <p class="fontS text-center">Not Registered Yet!
