--- a/src/app/forgot-password/forgot-password.component.html
+++ b/src/app/forgot-password/forgot-password.component.html
@@ -1,12 +1,12 @@
 <div class="container" style="padding: 5% 5%;">
-  <h2 class="display-6 text-center header">Avoid Reloading Page to avoid Error</h2>
+  <h2 class="display-6 text-center text-danger header">Avoid Reloading Page to avoid Error</h2>
   <mat-vertical-stepper linear #stepper>
-    <mat-step label="Enter your registered Email Id" completed = {{otpSent}}>
-      <form #firstForm="ngForm">
+    <mat-step label="Enter your registered Email ID" completed = {{otpSent}} [editable]="false">
+      <form #firstForm="ngForm" (submit)="sendOTP()">
         <div class="col-sm-4">
           <p>
             <mat-form-field appearance="outline" style="width: 100%;">
-              <mat-label>Email Id</mat-label>
+              <mat-label>Email ID</mat-label>
               <input 
                 matInput
                 placeholder="Enter registered email"
@@ -17,14 +17,15 @@
                 required>
             </mat-form-field>
           </p>
+          <p> An OTP will be sent to this Email Address if registered. </p>
         </div>
         <div class="col-sm-4">
-          <button mat-button color="primary" [disabled]="userEmail.errors" (click)="sendOTP(stepper)" matStepperNext>Send OTP</button>
+          <button mat-raised-button [disabled]="userEmail.errors" matStepperNext>Send OTP</button>
         </div>
       </form>
     </mat-step>
-    <mat-step label="Enter 6 digit OTP" completed={{validOTP}}>
-      <form #secondForm="ngForm">
+    <mat-step label="Enter 6 digit OTP" completed={{validOTP}} [editable]="false">
+      <form #secondForm="ngForm" (submit)="validateOTP()">
         <div class="col-sm-4">
           <p>
             <mat-form-field appearance="outline" style="width: 100%;">
@@ -42,12 +43,12 @@
           </p>
         </div>
         <div class="col-sm-4">
-          <button mat-button color="primary" [disabled]="userOTP.errors" (click)="validateOTP()" matStepperNext>Verify OTP</button>
+          <button mat-raised-button [disabled]="userOTP.errors" matStepperNext>Verify OTP</button>
         </div>
       </form>
     </mat-step>
-    <mat-step label="Reset Password">
-      <form #thirdForm="ngForm">
+    <mat-step label="Reset Password" completed={{resett}} [editable]="false">
+      <form #thirdForm="ngForm" (submit)="resetPassword()">
         <div class="col-sm-4">
           <p>
               <mat-form-field appearance="outline" style="width: 100%;">
@@ -78,9 +79,15 @@
             </p>
         </div>
         <div class="col-sm-4">
-          <button mat-raised-button color="primary" [disabled]="newPassword.value != newPassword2.value || newPassword.value == ''" (click)="resetPassword()">Reset Password</button>
+          <button mat-raised-button color="warn" [disabled]="newPassword.value != newPassword2.value || newPassword.value == ''">Reset Password</button>
         </div>
       </form>
+    </mat-step>
+    <mat-step label="Confirmation">
+      <p class="fontS text-center">
+        Your Password has been changed. You can now login with your new password.
+        <button mat-raised-button routerLink="/home">Login</button>
+      </p>
     </mat-step>
   </mat-vertical-stepper>
 </div>
