--- a/src/app/account/account.component.html
+++ b/src/app/account/account.component.html
@@ -81,59 +81,64 @@
     </div>
 </div>
 <br><br>
-<!-- <div class="container" style="width: 100% !important;"> -->
-<div class="row text-center fontS" style="background: #202020; padding: 1% 1% 0% 1% !important;">
-    <div class="col-sm-4 text-center" *ngIf="couponAppliedBefore < 2">
-        <mat-form-field appearance="legacy" style="width: 80%;" *ngIf="temp == 0">
-            <mat-label>Enter Coupon Code here</mat-label>
-            <input matInput type="text" placeholder="Coupon Code Please" name="cc" [(ngModel)]="cCode" />
-        </mat-form-field>
-        <mat-chip-list class="text-center" *ngIf="temp != 0">Coupon Applied:<mat-chip style="background: #dc3545; color: white; font-weight: bold;">{{cCode}}</mat-chip><br><br></mat-chip-list>
-    </div>
-    <div class="col-sm-4 text-center" *ngIf="couponAppliedBefore == 2">
-        <h5>Maximum coupon limit Reached</h5>
-    </div>
-    <div class="col-sm-4">
-        <button mat-raised-button (click)="apply()" *ngIf="temp == 0 && couponAppliedBefore < 2" [disabled]="totalC == 0 || cCode == ''">Apply Coupon</button>
-        <button mat-raised-button color="warn" (click)="remove()" *ngIf="temp != 0 && couponAppliedBefore < 2">Remove Coupon</button>
-        <button mat-raised-button (click)="openDialog()">Payment Instructions</button>
-    </div>
-    <div class="col-sm-4 text-center">
-        <mat-form-field appearance="legacy" style="width: 80%;">
-            <mat-label>Enter UPI Transaction ID</mat-label>
-            <input matInput type="text" placeholder="UTR Please" name="upi" (input)="checkAlphabet($event)" [(ngModel)]="upiId" />
-        </mat-form-field>
-    </div>
-    <div class="col-sm-4" *ngIf="temp != 0">
-        <p>Coupon Photo:</p>
-        <label class="btn btn-outline-danger" for="fileInput2" style="width: 80%">{{ couponPhoto ? "Choose Other File" : "Choose File" }}
-            <input type="file" hidden id="fileInput2" accept="image/*, .pdf"
-                (change)="fileRead($event.target.files, false)" required>
-        </label>
-        <p>{{ couponPhoto ? 'File Chosen: ' + couponPhoto.name : "No File Chosen" }}</p>
-    </div>
-    <div class="col-sm-4" *ngIf="temp == 0">
-        <br><br>
-    </div>
-    <div class="col-sm-4">
-        <p>Upload Payment Receipt:<span class="text-danger">*</span></p>
-        <label class="btn btn-outline-danger" for="fileInput3" style="width: 80%">{{ paymentReceipt ? "Choose Other File" : "Choose File" }}
-            <input type="file" hidden id="fileInput3" accept="image/*, .pdf"
-                (change)="fileRead($event.target.files, true)" required>
-        </label>
-        <p>{{ paymentReceipt ? 'File Chosen: ' + paymentReceipt.name : "No File Chosen" }}</p>
-    </div>
-    <div class="col-sm-4">
-        <button mat-raised-button (click)="eventPayment()" [disabled]="totalC + totalO == 0 || !paymentReceipt || !upiId ">Register for events</button>
+<div *ngIf = "eventRegistrationOpen">
+    <div class="text-center fontS" style="position: fixed; width: 100% !important; bottom: 0; background: #202020; padding: 1% !important;">
+        <h5><span>Event Registration is Closed!!!</span></h5>
     </div>
 </div>
-<br><br>
-<!-- <div class="container" style="width: 100% !important;"> -->
+<div *ngIf="!eventRegistrationOpen">
+    <div class="row text-center fontS" style="background: #202020; padding: 1% 1% 0% 1% !important;">
+        <div class="col-sm-4 text-center" *ngIf="couponAppliedBefore < 2">
+            <mat-form-field appearance="legacy" style="width: 80%;" *ngIf="temp == 0">
+                <mat-label>Enter Coupon Code here</mat-label>
+                <input matInput type="text" placeholder="Coupon Code Please" name="cc" [(ngModel)]="cCode" />
+            </mat-form-field>
+            <mat-chip-list class="text-center" *ngIf="temp != 0">Coupon Applied:<mat-chip style="background: #dc3545; color: white; font-weight: bold;">{{cCode}}</mat-chip><br><br></mat-chip-list>
+        </div>
+        <div class="col-sm-4 text-center" *ngIf="couponAppliedBefore == 2">
+            <h5>Maximum coupon limit Reached</h5>
+        </div>
+        <div class="col-sm-4">
+            <button mat-raised-button (click)="apply()" *ngIf="temp == 0 && couponAppliedBefore < 2" [disabled]="totalC == 0 || cCode == ''">Apply Coupon</button>
+            <button mat-raised-button color="warn" (click)="remove()" *ngIf="temp != 0 && couponAppliedBefore < 2">Remove Coupon</button>
+            <button mat-raised-button (click)="openDialog()">Payment Instructions</button>
+        </div>
+        <div class="col-sm-4 text-center">
+            <mat-form-field appearance="legacy" style="width: 80%;">
+                <mat-label>Enter UPI Transaction ID</mat-label>
+                <input matInput type="text" placeholder="UTR Please" name="upi" (input)="checkAlphabet($event)" [(ngModel)]="upiId" />
+            </mat-form-field>
+        </div>
+        <div class="col-sm-4" *ngIf="temp != 0">
+            <p>Coupon Photo:</p>
+            <label class="btn btn-outline-danger" for="fileInput2" style="width: 80%">{{ couponPhoto ? "Choose Other File" : "Choose File" }}
+                <input type="file" hidden id="fileInput2" accept="image/*, .pdf"
+                    (change)="fileRead($event.target.files, false)" required>
+            </label>
+            <p>{{ couponPhoto ? 'File Chosen: ' + couponPhoto.name : "No File Chosen" }}</p>
+        </div>
+        <div class="col-sm-4" *ngIf="temp == 0">
+            <br><br>
+        </div>
+        <div class="col-sm-4">
+            <p>Upload Payment Receipt:<span class="text-danger">*</span></p>
+            <label class="btn btn-outline-danger" for="fileInput3" style="width: 80%">{{ paymentReceipt ? "Choose Other File" : "Choose File" }}
+                <input type="file" hidden id="fileInput3" accept="image/*, .pdf"
+                    (change)="fileRead($event.target.files, true)" required>
+            </label>
+            <p>{{ paymentReceipt ? 'File Chosen: ' + paymentReceipt.name : "No File Chosen" }}</p>
+        </div>
+        <div class="col-sm-4">
+            <button mat-raised-button (click)="eventPayment()" [disabled]="totalC + totalO == 0 || !paymentReceipt || !upiId ">Register for events</button>
+        </div>
+    </div>
+    <br><br>
+
     <div class="text-center fontS" style="position: fixed; width: 100% !important; bottom: 0; background: #202020; padding: 1% !important;">
         <h5 *ngIf="coupon.couponCode && couponAppliedBefore < 2">Total Amount (INR): {{totalO}} + <span *ngIf="temp == 0">{{totalC}}</span><span *ngIf="temp != 0"><s>{{totalC + temp}}</s> {{totalC}} </span> = {{totalC + totalO}}/- </h5>
         <h5 *ngIf="(!coupon.couponCode && !loading) || couponAppliedBefore == 2">Total Amount (INR): {{totalO + totalC}}  </h5>
     </div>
-<!-- </div> -->
+</div>
 <div class="loader-holder" *ngIf="loading">
   <div class="lds-roller"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>
 </div>
