--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -48,8 +48,11 @@
             </p> -->
         </form>
         <br>
-        <p class="fontS text-center">Not Registered Yet!
+        <p *ngIf="registration" class="fontS text-center">Not Registered Yet!
             <button mat-raised-button color="warn" routerLink="/register">Register</button>
+        </p>
+        <p *ngIf="!registration" class="header text-danger text-center">
+            Registration Closed!!
         </p>
         <hr>
         <br>
