--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -48,12 +48,12 @@
             </p> -->
         </form>
         <br>
-        <p class="fontS text-center">Not Registered Yet!
+        <!-- <p class="fontS text-center">Not Registered Yet!
             <button mat-raised-button color="warn" routerLink="/register">Register</button>
-        </p>
-        <!-- <p *ngIf=false class="header text-danger text-center">
-            Registration Closed!!
         </p> -->
+        <p class="header text-danger text-center">
+            Registration Closed!!
+        </p>
         <hr>
         <br>
         <h4 class="fontS text-danger text-center">
